tests/semantica/valid/metodos/test4.ctds
program 
	{
        integer foo() extern;

        void main(){
            integer x = 0;

            x = foo();
        }
    }