tests/semantica/invalid/main/test2.ctds
program 
	{
        void main(integer x){
            return;
        }
    }